fixed collapse directive from repainting lines

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -371,7 +371,7 @@ button {
 	}
 
 	[layout-align="center center"], [layout-align="center"], [layout-align="start center"] {
-		margin-top: 25px;
+		margin-top: 30px;
 	}
 
 	.md-button {
